2025-02-18T01:01:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13381102172 # 569
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-18
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 451 844 / 467 860
* notice: next accum: outdated-unq outdated-all / unq all: 452 845 / 468 861
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-04] / [2025-02-17]

2025-02-17T01:04:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13360699757 # 568
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-17
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 440 830 / 466 859
* notice: next accum: outdated-unq outdated-all / unq all: 451 844 / 467 860
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-02 2025-02-03] / [2025-02-16]

2025-02-15T01:00:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13340162489 # 566
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-15
* notice: last 14d: unq all: 15 29
* notice: prev accum: outdated-unq outdated-all / unq all: 439 829 / 461 854
* notice: next accum: outdated-unq outdated-all / unq all: 440 830 / 466 859
* notice: prev exec diff / last date diff / accum: unq all: +5 +5 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-01] / [2025-02-12 2025-02-13 2025-02-14]

2025-02-14T01:01:38Z: