@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-18T01:01:36Z",
-  "count_outdated" : 845,
-  "uniques_outdated" : 452,
-  "count" : 861,
-  "uniques" : 468,
+  "timestamp" : "2025-02-19T01:01:58Z",
+  "count_outdated" : 846,
+  "uniques_outdated" : 453,
+  "count" : 862,
+  "uniques" : 469,
   "clones" : [
-    {
-      "timestamp": "2025-02-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-06T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
