@@ -1,3 +1,12 @@
+2025-02-19T01:01:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403214646 # 570
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
+* notice: last 14d: unq all: 6 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 452 845 / 468 861
+* notice: next accum: outdated-unq outdated-all / unq all: 453 846 / 469 862
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-05] / [2025-02-18]
+
 2025-02-18T01:01:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13381102172 # 569
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-18
